fix font size, letter spacing and text color on card components

--- a/frontend/src/HomePage.css
+++ b/frontend/src/HomePage.css
@@ -100,14 +100,15 @@
     text-decoration: none;
     overflow: hidden;
     transition: .7s;
-    letter-spacing: 4px;
+    letter-spacing: 3px;
+    line-height: 1.3rem;
     background: #1a1a23;
 }
 
 .card:hover {
     transition: background-color 0.6s ease-in-out;
     background: #03e9f4;
-    color: #fff;
+    color: #353546;
     box-shadow: 0 0 5px #03e9f4,
     0 0 15px #03e9f4,
     0 0 30px #03e9f4,
@@ -159,6 +160,14 @@
     font-weight: bold;
 }
 
+.card-year, .card-artist-name {
+    font-weight: bold;
+}
+
+.card-year {
+    font-size: 1.1rem;
+}
+
 .card-type-container {
     display: flex;
     flex-direction: row;
@@ -192,6 +201,23 @@
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+}
+
+.search-result-cards {
+    width: 80%;
+}
+
+.search-result-cards .card {
+    width: 15%;
+}
+
+.result-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1rem;
+    width: 80%;
+    margin-top: 5rem;
 }
 
 @media screen and (max-width: 1000px) {
